add not ranked option #73 #112
